--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/faker": "^6.6.9",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
@@ -30,5 +31,8 @@
     "lint-staged": "^12.4.1",
     "ts-jest": "^28.0.2",
     "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "axios": "^0.27.2"
   }
 }
