--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
@@ -49,6 +50,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0"
   }
 }
