--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@testing-library/react": "^13.3.0",
     "@types/axios": "^0.14.0",
     "@types/faker": "^6.6.9",
     "@types/jest": "^27.5.1",
@@ -36,6 +37,7 @@
     "husk": "^0.5.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.1",
     "lint-staged": "^12.4.1",
     "node-sass": "^7.0.1",
     "sass-loader": "^13.0.0",
